<resources>
    <string name="app_name">Recipe</string>
    <string name="search_recipes">Search recipes</string>
    <string name="servings">Servings</string>
    <string name="recipe_image">Recipe image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_description">Show description</string>
    <string name="popular_recipes">Popular recipes</string>
    <string name="cook_today">What do you want to cook today?</string>
    <string name="min">min</string>
    <string name="kcal">kcal</string>
    <string name="ingredients">Ingredients</string>
    <string name="equipments">Equipments</string>
    <string name="go_to_steps">Go to steps</string>
    <string name="recipe_preparation">Recipe preparation</string>
    <string name="step">Step</string>
    <string name="ingredients_dt">Ingredients:</string>
    <string name="equipments_dt">Equipments:</string>
    <string name="dish_types">Dish types</string>
    <string name="my_favourite_recipes">My favourite recipes</string>
    <string name="recipes">Recipes</string>
    <string name="my_recipes">My recipes</string>
    <string name="create_recipe">Create recipe</string>
    <string name="click_here_to_upload_photo">Tap here \nto upload a photo</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="upload_new_picture">Upload new\n picture</string>
    <string name="delete_image">Delete image</string>
    <string name="save_changes">Save changes</string>
    <string name="no_image_available">No image available</string>
    <string name="recipe">Recipe</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="you_can">You can</string>
    <string name="delete_account">delete account</string>
    <string-array name="cuisine_list">
        <item>Chinese</item>
        <item>British</item>
        <item>American</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>French</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="spinner_list">
        <item></item>
        <item>Exit</item>
    </string-array>
    <string name="delete_account_dialog">Do you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="popular_food">Popular recipe</string>
</resources>